# git-rebrand

./: .actrc  .clippy.toml  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  codecov.yml  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml  rust.yml
docs/: local-actions-testing.md
src/: lib.rs  main.rs
tests/: lib.rs
tests/common/: mod.rs
