[package]
name = "git-rebrand"
version = "0.1.3"
edition = "2021"
authors = ["aloshy.🅰🅸 <noreply@aloshy.ai>"]
description = "A Git extension to rewrite repository history for rebranding purposes"
license = "MIT"
repository = "https://github.com/aloshy-ai/git-rebrand"
readme = "README.md"
keywords = ["git", "vcs", "rewrite", "history", "rebrand"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70.0"

[[bin]]
name = "git-rebrand"
path = "src/main.rs"

[lib]
name = "git_rebrand"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"

# Logging
log = "0.4"
env_logger = "0.10"

# Git functionality
git2 = "0.19"
# OpenSSL (for static linking)
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
chrono = "0.4"
dirs = "5.0"
regex = "1.10"
colored = "2.0"
prettytable-rs = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
# Testing
assert_fs = "1.0"
predicates = "3.0"
proptest = "1.3"
tempfile = "3.8"
test-case = "3.1"
pretty_assertions = "1.4"

# Benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 2

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[features]
vendored-openssl = ["openssl/vendored"]
